fixed alignment on lambdas

--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@ textarea {display:block}
 .node {position:absolute; white-space:nowrap;  padding:4px 2px;}
 .node div > * {display:inline-block; vertical-align:middle; white-space:nowrap;}
 .node li {display:block;}
-.input {text-align:right;}
 .nib {width:10px; height:10px; background:green; border-radius:10px; display:inline-block;
 position:relative; z-index:20;}
 
 .output .nib, .inner-lambda .input .nib {margin-left:-7px; margin-right:0;}
 .input .nib, .inner-lambda .output .nib {margin-right:-7px; margin-left:0;}
+
+.input, .inner-lambda .output {text-align:right;}
+.output, .inner-lambda .input { text-align:left;}
 
  {margin-}
 
